Estilizando, agora so falta a interação com os clicks e cards

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
     </head>
     <body>
         <section>
-            <div>
+            <img src="./pokeball.png" alt="icon pokeball" class="icon">
+            <div class="buttons">
                 <button id="primeira">Primeira Geração</button>
                 <button id="segunda">Segunda Geração</button>
                 <button id="terceira">Terceira Geração</button>
@@ -19,6 +20,18 @@
                 <button id="setima">Setima Geração</button>
                 <button id="oitava">Oitava Geração</button>
             </div>
+
+            <div class="selecao">
+                <h2 id="geracao1">Primeira Geração</h2>
+                <h2 id="geracao2">Segunda Geração</h2>
+                <h2 id="geracao3">Terceira Geração</h2>
+                <h2 id="geracao4">Quarta Geração</h2>
+                <h2 id="geracao5">Quinta Geração</h2>
+                <h2 id="geracao6">Sexta Geração</h2>
+                <h2 id="geracao7">Setima Geração</h2>
+                <h2 id="geracao8">Oitava Geração</h2>
+            </div>
+
             <h1 id="titulo"></h1>
             <div>
                 <ul id="pokemonList" class="pokemons"></ul>
